# archiver

./: .envrc  pyproject.toml  ruff.toml  schema.sql
archiver/: database.py  loader.py  resource.py  wsgi.py
test/: 1.eml  2.eml  3.eml  4.eml  conftest.py  ruff.toml  sample.eml  test_database.py  test_loader.py  test_wsgi.py
