[project]
name = "archiver"
version = "0.0.1"
authors = [
  { name = "Kaiting Chen", email = "ktchen14@gmail.com" },
]
description = "An email to JSON bridge"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "Flask >= 3.0.2",
  "SQLAlchemy >= 2.0.30",
  "django-mailman3 >= 1.3.6",
  "psycopg >= 3.1.19",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Flask",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.optional-dependencies]
test = [
  "pytest >= 8.1.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["archiver"]
